# DSA-ASS

./: .gitignore  CMakeLists.txt  README.md
include/: customer.h  sim.h  teller.h
src/: customer.c  main.c  sim.c  teller.c
